--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "devDependencies": {
     "grunt": "~0.4.0",
+    "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-coffee": "~0.6.0",
     "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-watch": "~0.3.0",
     "docco": "git://github.com/jashkenas/docco.git"
   }
 }
