--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~3.1.0",
     "gzippo": "~0.2.0",
     "irc": "~0.3.0",
+    "moment": "~2.0.0",
     "winston": "~0.6.0"
   },
   "devDependencies": {
