--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "author": "Kenan Yildirim",
   "license": "MIT",
   "dependencies": {
-    "derby": "~0.3.0",
     "express": "~3.1.0",
+    "express-uncapitalize": "~1.0.0",
     "gzippo": "~0.2.0",
     "irc": "~0.3.0",
     "moment": "~2.0.0",
