Move config code to its own file
Also begin using TOML because of its simplicity

--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "author": "Kenan Yildirim",
   "license": "MIT",
   "dependencies": {
+    "async": "~0.2.0",
     "express": "~3.1.0",
     "express-uncapitalize": "~1.0.0",
     "gzippo": "~0.2.0",
     "irc": "~0.3.0",
     "moment": "~2.0.0",
+    "topl": "~0.2.0",
     "winston": "~0.6.0"
   },
   "devDependencies": {
