--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "grunt-contrib-coffee": "~0.6.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.3.0"
+  },
+  "optionalDependencies": {
+    "graceful-fs": "~1.2.0"
   }
 }
