--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "irc": "0.3.6",
     "jade": "0.31.2",
     "moment": "2.0.0",
+    "stringify-object": "0.1.4",
     "topl": "0.2.0",
     "winston": "0.7.1"
   },
