--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "winston": "0.7.1"
   },
   "devDependencies": {
+    "component-builder": "0.8.3",
     "grunt": "0.4.1",
     "grunt-contrib-clean": "0.4.1",
     "grunt-contrib-coffee": "0.7.0",
