--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "winston"
   ],
   "devDependencies": {
-    "component-builder": "0.9.0",
-    "grunt": "0.4.1",
-    "grunt-contrib-clean": "0.5.0",
-    "grunt-contrib-coffee": "0.7.0",
-    "grunt-contrib-uglify": "0.2.2",
-    "grunt-contrib-watch": "0.5.3"
+    "component-builder": "~0.9.0",
+    "grunt": "~0.4.1",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-watch": "~0.5.3"
   },
   "optionalDependencies": {
     "graceful-fs": "1.2.2"
