--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gzippo": "0.2.0",
     "irc": "0.3.6",
     "jade": "0.35.0",
+    "lodash": "1.3.1",
     "moment": "2.1.0",
     "stringify-object": "0.1.5",
     "topl": "0.2.0",
