--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lodash": "1.3.1",
     "ms": "0.6.1",
     "stringify-object": "0.1.6",
-    "topl": "0.2.0",
+    "toml": "1.0.4",
     "winston": "0.7.2"
   },
   "bundleDependencies": [
