--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jade": "0.35.0",
     "lodash": "1.3.1",
     "ms": "0.6.1",
+    "passport": "0.1.17",
+    "passport-twitchtv": "0.1.1",
     "stringify-object": "0.1.6",
     "toml": "1.0.4",
     "winston": "0.7.2"
@@ -39,7 +41,9 @@
     "irc",
     "jade",
     "lodash",
-    "moment",
+    "ms",
+    "passport",
+    "passport-twitchtv",
     "stringify-object",
     "toml",
     "winston"
