--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jade": "0.35.0",
     "lodash.defaults": "2.0.0",
     "lodash.forown": "2.0.0",
+    "lodash.isfunction": "2.0.0",
+    "lodash.isundefined": "2.0.0",
     "ms": "0.6.1",
     "passport": "0.1.17",
     "passport-twitchtv": "0.1.1",
@@ -43,6 +45,8 @@
     "jade",
     "lodash.defaults",
     "lodash.forown",
+    "lodash.isfunction",
+    "lodash.isundefined",
     "ms",
     "passport",
     "passport-twitchtv",
