Update default configs to match OAuth requirement
Also fix channel-joining by prefixing `#`

--- a/sample.config.toml
+++ b/sample.config.toml
@@ -1,6 +1,6 @@
 [account]
-username = "adminbot"
-password = "password123"
+username = "nwitch"
+password = "oauth:"
 channel = "riotgames"
 
 [irc]
