--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
     "email": "kenan@kenany.me",
     "web": "http://kenany.me/"
   },
+  "files": [
+    "bin",
+    "components",
+    "lib",
+    "public",
+    "views",
+    "LICENSE.md"
+  ],
   "bin": {
     "nwitch": "bin/cmd.js"
   },
