Use new semver caret operator

--- a/package.json
+++ b/package.json
@@ -27,27 +27,27 @@
   "repository": "https://github.com/KenanY/nwitch.git",
   "license": "MIT",
   "dependencies": {
-    "async": "0.2.9",
-    "concat-stream": "~1",
-    "express": "~3",
-    "express-uncapitalize": "~1",
-    "findup-sync": "0.1.2",
-    "graceful-fs": "~2",
-    "gzippo": "0.2.0",
-    "inquirer": "0.3.5",
-    "irc": "0.3.6",
-    "jade": "0.35.0",
-    "lodash.defaults": "~2",
-    "lodash.forown": "~2",
-    "lodash.isfunction": "~2",
-    "lodash.isundefined": "~2",
-    "ms": "0.6.1",
-    "passport": "0.1.17",
-    "passport-twitchtv": "0.1.1",
-    "resolve": "0.5.1",
-    "stringify-object": "0.1.7",
-    "toml": "~1",
-    "winston": "0.7.2"
+    "async": "^0.2.9",
+    "concat-stream": "^1.1.0",
+    "express": "^3.4.4",
+    "express-uncapitalize": "^1.0.0",
+    "findup-sync": "^0.1.2",
+    "graceful-fs": "^2.0.1",
+    "gzippo": "^0.2.0",
+    "inquirer": "^0.3.5",
+    "irc": "^0.3.6",
+    "jade": "^0.35.0",
+    "lodash.defaults": "^2.3.0",
+    "lodash.forown": "^2.3.0",
+    "lodash.isfunction": "^2.3.0",
+    "lodash.isundefined": "^2.3.0",
+    "ms": "^0.6.1",
+    "passport": "^0.1.17",
+    "passport-twitchtv": "^0.1.1",
+    "resolve": "^0.5.1",
+    "stringify-object": "^0.1.7",
+    "toml": "^1.0.4",
+    "winston": "^0.7.2"
   },
   "devDependencies": {
     "component-builder": "~0.9.0",
