--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "concat-stream": "^1.1.0",
     "express": "^3.4.4",
     "express-uncapitalize": "^1.0.0",
-    "findup-sync": "^0.1.2",
+    "findup-sync": "git://github.com/KenanY/node-findup-sync.git#lodash-2",
     "graceful-fs": "^2.0.1",
     "gzippo": "^0.2.0",
     "inquirer": "^0.3.5",
