--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "inquirer": "^0.3.5",
     "irc": "^0.3.6",
     "jade": "^0.35.0",
+    "json2toml": "^1.0.0",
     "lodash.defaults": "^2.3.0",
     "lodash.forown": "^2.3.0",
     "lodash.isfunction": "^2.3.0",
