--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "nwitch-init": "bin/init.js"
   },
   "main": "./lib/",
+  "scripts": {
+    "build": "node build.js"
+  },
   "repository": "KenanY/nwitch",
   "license": "MIT",
   "dependencies": {
@@ -44,7 +47,6 @@
     "winston": "^0.7.2"
   },
   "devDependencies": {
-    "component-builder": "~0.9.0",
-    "grunt": "~0.4.0"
+    "component-builder": "~0.9.0"
   }
 }
