--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nwitch",
   "version": "0.3.2",
-  "description": "A TwitchTV bot written in JavaScript.",
+  "description": "A simple, pluggable IRC bot.",
   "author": "Kenan Yildirim <kenan@kenany.me> (http://kenany.me/)",
   "files": [
     "bin",
