Fix invalid JSON in `package.json`
Closes #24

--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "resolve": "^0.5.1",
     "slate-irc": "^0.4.0",
     "toml": "^1.0.4",
-    "winston": "^0.7.2",
+    "winston": "^0.7.2"
   }
 }
