--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "slate-irc": "^0.4.0",
     "toml": "^1.0.4",
     "winston": "^0.7.2"
+  },
+  "devDependencies": {
+    "ircd": "^0.1.0",
+    "tape": "^3.0.0"
   }
 }
