Depend on ircd master
Closes #34

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "winston": "^0.8.0"
   },
   "devDependencies": {
-    "ircd": "^0.1.0",
+    "ircd": "aredridel/node-ircd",
     "tape": "^3.0.0"
   }
 }
