Have 0.8 test not update to `npm@2`
Closes #35

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ branches:
   only:
     - master
 before_install:
-  - npm install -g npm@2.0.2
+  - '[ "${TRAVIS_NODE_VERSION}" != "0.8" ] || npm install -g npm@1.4.28'
+  - npm install -g npm
   - npm --version
